# tsu-csd-theory

./: .gitignore  .gitmodules  CMakeLists.txt  array.cpp  array.hpp  basics.cpp  basics.h  graphic_symphony.txt  hello.cpp  main.cpp  sort.cpp  sort.h
source/: 13-determinant.cc  13-determinant.h  13-inverse.cc  13-inverse.h  biky-basic-functions.cc  biky-basic-functions.h  main.cc  sort.cc  sort.h
source/biky-linear-algebra/: initializations.h  linear-operations.h  products.h
source/biky-linear-algebra/src/: initializations.cc  linear-operations.cc  products.cc
tests/determinants/: 1  2  3  4  5  6  7
tests/inverses/: 2  3  4
tests/inverses/answers/: 2  3  4
